--- a/CalculatorApi/Properties/launchSettings.json
+++ b/CalculatorApi/Properties/launchSettings.json
@@ -24,7 +24,9 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "AddApi": "https://localhost:44383",
+        "SubApi": "https://localhost:44362"
       }
     },
     "Docker": {
